Grease Pencil Automerge icon doesn't light up/turn off when toggled with a keypress #94366

Closed
opened 2021-12-24 15:00:21 +01:00 by Matthew Gafford · 6 comments

System Information
Operating system: Windows 10
Graphics card: RTX 3070

Blender Version
Broken: 3.0.0, 2.935
Worked: N/A

Short Description
You will notice the Automerge button icon does not toggle blue/gray when toggled on/off with shortcut key. Only hovering the mouse over the top menu bar, or beginning to draw a line will update the icon.

Steps to reproduce

  1. In Grease Pencil's Draw Mode, right-click the Automerge button and set a keyboard shortcut.
  2. Press the bound key to toggle Automerge on/off a few times. (move mouse over other editor/menu to update)
**System Information** Operating system: Windows 10 Graphics card: RTX 3070 **Blender Version** Broken: 3.0.0, 2.935 Worked: N/A **Short Description** You will notice the Automerge button icon does not toggle blue/gray when toggled on/off with shortcut key. Only hovering the mouse over the top menu bar, or beginning to draw a line will update the icon. **Steps to reproduce** 1. In Grease Pencil's Draw Mode, right-click the Automerge button and set a keyboard shortcut. 2. Press the bound key to toggle Automerge on/off a few times. (move mouse over other editor/menu to update)

Added subscriber: @AFoxInSpace

Added subscriber: @AFoxInSpace
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2022-01-04 10:52:00 +01:00

This issue was referenced by 8a901d4925

This issue was referenced by 8a901d4925de6c1966b0df12104cdda1543ee02b

This issue was referenced by 5df916f23f

This issue was referenced by 5df916f23f0d742a531136279ca6c126d3fb03b3
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94366
No description provided.